Add main menu on index.html

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,22 @@
     </div><!-- /.container -->
   </nav>
 
+  <div class="row">
+    <div class="container">
+      <div class="col-md-3">
+        <!-- Main menu -->
+        <nav class="main-menu" role="navigation">
+          <ul class="nav nav-pills nav-stacked">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Receitas</a></li>
+            <li><a href="#">Nova Receita</a></li>
+          </ul>
+        </nav><!-- /.main-menu -->
+      </div>
+
+      <div class="col-md-9"></div>
+    </div><!-- /.container -->
+  </div><!-- /.row -->
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
