--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,41 @@
         </nav><!-- /.main-menu -->
       </div>
 
-      <div class="col-md-9"></div>
+      <div class="col-md-9">
+        <!-- Display recipe images on a carousel -->
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="http://lorempixel.com/900/300/food/8/" alt="Primeira Receita">
+              <div class="carousel-caption">
+                <span class="h1">Primeira Receita</span>
+              </div>
+            </div>
+
+            <div class="item">
+              <img src="http://lorempixel.com/900/300/food/3/" alt="Segunda Receita">
+              <div class="carousel-caption">
+                <span class="h1">Segunda Receita</span>
+              </div>
+            </div>
+          </div><!-- /.carouse-inner -->
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+          </a>
+        </div><!-- /.carousel -->
+      </div>
     </div><!-- /.container -->
   </div><!-- /.row -->
 
