--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,19 @@
   <!-- Bootstrap -->
   <link href="assets/stylesheets/style.css" rel="stylesheet">
 
+  <!-- Google fonts -->
+  <link href="http://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-<body>
-  
+
+<body>  
   <nav class="navbar navbar-default" role="navigation">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -42,7 +47,7 @@
 
   <div class="row">
     <div class="container">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <!-- Main menu -->
         <nav class="main-menu" role="navigation">
           <ul class="nav nav-pills nav-stacked">
@@ -53,7 +58,7 @@
         </nav><!-- /.main-menu -->
       </div>
 
-      <div class="col-md-9">
+      <div class="col-md-8">
         <!-- Display recipe images on a carousel -->
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
@@ -65,14 +70,21 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item active">
-              <img src="http://lorempixel.com/900/300/food/8/" alt="Primeira Receita">
+              <img src="http://dev.munfactory.com/cookbook/images/steak-with-potatoes.jpg" alt="Primeira Receita">
               <div class="carousel-caption">
                 <span class="h1">Primeira Receita</span>
               </div>
             </div>
 
             <div class="item">
-              <img src="http://lorempixel.com/900/300/food/3/" alt="Segunda Receita">
+              <img src="http://dev.munfactory.com/cookbook/images/sausage-cabbage-and-tomato-1.jpg" alt="Segunda Receita">
+              <div class="carousel-caption">
+                <span class="h1">Segunda Receita</span>
+              </div>
+            </div>
+
+            <div class="item">
+              <img src="http://dev.munfactory.com/cookbook/images/4646066888_397b6d0301_o.jpg" alt="Segunda Receita">
               <div class="carousel-caption">
                 <span class="h1">Segunda Receita</span>
               </div>
@@ -91,7 +103,29 @@
     </div><!-- /.container -->
   </div><!-- /.row -->
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <div class="row">
+    <div class="container">
+      <div class="col-md-3">
+        <div class="recipe-block">
+          <a href="#">
+            <div class="recipe-block-title">
+              <h3>Receita de sei-la-o-que</h3>
+            </div>
+
+            <div class="recipe-block-image">
+              <img class="img-responsive" src="http://dev.munfactory.com/cookbook/images/4646066888_397b6d0301_o.jpg" alt="Segunda Receita">
+            </div>
+
+            <div class="recipe-block-footer">
+              
+            </div>
+          </a>
+        </div>
+      </div>
+    </div><!-- /.container -->
+  </div><!-- /.row -->
+
+  <!-- jQuery (necessary for Bootstrap"s JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="assets/javascripts/bootstrap.min.js"></script>
