--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,7 @@
           <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
           </ol>
 
           <!-- Wrapper for slides -->
@@ -105,15 +106,63 @@
 
   <div class="row">
     <div class="container">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="recipe-block">
           <a href="#">
             <div class="recipe-block-title">
-              <h3>Receita de sei-la-o-que</h3>
+              Receita de sei-la-o-que
             </div>
 
             <div class="recipe-block-image">
+              <div class="caption">
+                <h2>Hello World</h2>
+              </div>
+
+              <img class="img-responsive" src="http://dev.munfactory.com/cookbook/images/steak-with-potatoes.jpg" alt="Segunda Receita">
+            </div>
+
+            <div class="recipe-block-footer">
+              
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="recipe-block">
+          <a href="#">
+            <div class="recipe-block-title">
+              Receita de sei-la-o-que
+            </div>
+
+            <div class="recipe-block-image">
+              <div class="caption">
+                <h2>Hello World</h2>
+              </div>
+
               <img class="img-responsive" src="http://dev.munfactory.com/cookbook/images/4646066888_397b6d0301_o.jpg" alt="Segunda Receita">
+            </div>
+
+            <div class="recipe-block-footer">
+              
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="recipe-block">
+          <a href="#">
+            <div class="recipe-block-title">
+              Receita de sei-la-o-que
+            </div>
+
+            <div class="recipe-block-image">
+              <div class="caption">
+                <h2>Hello World</h2>
+              </div>
+
+              <img class="img-responsive" src="http://dev.munfactory.com/cookbook/images/sausage-cabbage-and-tomato-1.jpg" alt="Segunda Receita">
             </div>
 
             <div class="recipe-block-footer">
