--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   <!-- Bootstrap -->
   <link href="assets/stylesheets/style.css" rel="stylesheet">
 
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="favicon.ico">
+
   <!-- Google fonts -->
   <link href="http://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400" rel="stylesheet">
