--- a/public/index.html
+++ b/public/index.html
@@ -112,19 +112,30 @@
       <div class="col-md-4">
         <div class="recipe-block">
           <a href="#">
-            <div class="recipe-block-title">
+            <div class="recipe-title">
               Receita de sei-la-o-que
             </div>
 
-            <div class="recipe-block-image">
-              <div class="caption">
-                <h2>Hello World</h2>
+            <div class="recipe-image">
+              <div class="recipe-caption">
+                <div class="item">
+                  <i class="icon icon-clock-1"></i>
+                  <span>15 Min</span>
+                </div>
+                <div class="item">
+                  <i class="icon icon-user-1"></i>
+                  <span>6 Pessoas</span>
+                </div>
+                <div class="item">
+                  <i class="icon icon-beaker-1"></i>
+                  <span>Fácil</span>
+                </div>
               </div>
 
               <img class="img-responsive" src="http://dev.munfactory.com/cookbook/images/steak-with-potatoes.jpg" alt="Segunda Receita">
             </div>
 
-            <div class="recipe-block-footer">
+            <div class="recipe-footer">
               
             </div>
           </a>
