--- a/public/index.html
+++ b/public/index.html
@@ -97,10 +97,10 @@
 
           <!-- Controls -->
           <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="icon icon-left-open"></span>
           </a>
           <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="icon icon-left-open"></span>
           </a>
         </div><!-- /.carousel -->
       </div>
@@ -113,7 +113,7 @@
         <div class="recipe-block">
           <a href="index.html">
             <div class="recipe-title">
-              Receita de sei-la-o-que
+              Bife com Batatas
             </div>
 
             <div class="recipe-image">
@@ -132,7 +132,79 @@
                 </div>
               </div>
 
-              <img class="img-responsive" src="http://dev.munfactory.com/cookbook/images/steak-with-potatoes.jpg" alt="Segunda Receita">
+              <img class="img-responsive" src="assets/images/static/steak-with-potatoes.jpg" height="410" width="620">
+            </div>
+
+            <div class="recipe-footer">
+              <div class="pull-left">
+                <strong>Guilherme Coelho</strong>
+                <em>14/12/2014</em>
+              </div>
+              <a class="link" href="#"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="recipe-block">
+          <a href="index.html">
+            <div class="recipe-title">
+              Sanduíche com Filet Mignon
+            </div>
+
+            <div class="recipe-image">
+              <div class="recipe-caption">
+                <div class="item">
+                  <i class="icon icon-clock-1"></i>
+                  <span>15 Min</span>
+                </div>
+                <div class="item">
+                  <i class="icon icon-user-1"></i>
+                  <span>6 Pessoas</span>
+                </div>
+                <div class="item">
+                  <i class="icon icon-beaker-1"></i>
+                  <span>Fácil</span>
+                </div>
+              </div>
+
+              <img class="img-responsive" src="assets/images/static/filet-mignon-sandwich.jpg">
+            </div>
+
+            <div class="recipe-footer">
+              <div class="pull-left">
+                <strong>Guilherme Coelho</strong>
+                <em>14/12/2014</em>
+              </div>
+              <a class="link" href="#"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="recipe-block">
+          <a href="index.html">
+            <div class="recipe-title">
+              Virado de Repolho
+            </div>
+
+            <div class="recipe-image">
+              <div class="recipe-caption">
+                <div class="item">
+                  <i class="icon icon-clock-1"></i>
+                  <span>15 Min</span>
+                </div>
+                <div class="item">
+                  <i class="icon icon-user-1"></i>
+                  <span>6 Pessoas</span>
+                </div>
+                <div class="item">
+                  <i class="icon icon-beaker-1"></i>
+                  <span>Fácil</span>
+                </div>
+              </div>
+
+              <img class="img-responsive" src="assets/images/static/sausage-cabbage-and-tomato-1.jpg">
             </div>
 
             <div class="recipe-footer">
