--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
             <span class="icon icon-left-open"></span>
           </a>
           <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="icon icon-left-open"></span>
+            <span class="icon icon-right-open"></span>
           </a>
         </div><!-- /.carousel -->
       </div>
