--- a/public/index.html
+++ b/public/index.html
@@ -76,21 +76,21 @@
             <div class="item active">
               <img src="http://dev.munfactory.com/cookbook/images/steak-with-potatoes.jpg" alt="Primeira Receita">
               <div class="carousel-caption">
-                <span class="h1">Primeira Receita</span>
+                <span class="h1">Bife com Batatas</span>
               </div>
             </div>
 
             <div class="item">
               <img src="http://dev.munfactory.com/cookbook/images/sausage-cabbage-and-tomato-1.jpg" alt="Segunda Receita">
               <div class="carousel-caption">
-                <span class="h1">Segunda Receita</span>
+                <span class="h1">Sanduíche de Filet Mignon</span>
               </div>
             </div>
 
             <div class="item">
               <img src="http://dev.munfactory.com/cookbook/images/4646066888_397b6d0301_o.jpg" alt="Segunda Receita">
               <div class="carousel-caption">
-                <span class="h1">Segunda Receita</span>
+                <span class="h1">Virado de Repolho</span>
               </div>
             </div>
           </div><!-- /.carouse-inner -->
@@ -124,7 +124,7 @@
                 </div>
                 <div class="item">
                   <i class="icon icon-user-1"></i>
-                  <span>6 Pessoas</span>
+                  <span>6 Porções</span>
                 </div>
                 <div class="item">
                   <i class="icon icon-beaker-1"></i>
@@ -149,7 +149,7 @@
         <div class="recipe-block">
           <a href="index.html">
             <div class="recipe-title">
-              Sanduíche com Filet Mignon
+              Sanduíche de Filet Mignon
             </div>
 
             <div class="recipe-image">
@@ -160,7 +160,7 @@
                 </div>
                 <div class="item">
                   <i class="icon icon-user-1"></i>
-                  <span>6 Pessoas</span>
+                  <span>6 Porções</span>
                 </div>
                 <div class="item">
                   <i class="icon icon-beaker-1"></i>
@@ -196,7 +196,7 @@
                 </div>
                 <div class="item">
                   <i class="icon icon-user-1"></i>
-                  <span>6 Pessoas</span>
+                  <span>6 Porções</span>
                 </div>
                 <div class="item">
                   <i class="icon icon-beaker-1"></i>
