--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,24 @@
         <!-- Main menu -->
         <nav class="main-menu" role="navigation">
           <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Receitas</a></li>
-            <li><a href="#">Nova Receita</a></li>
+            <li class="active">
+              <a href="#">
+                Home
+                <i class="icon icon-shop"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Receitas
+                <i class="icon icon-food-1"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Nova Receita
+                <i class="icon icon-doc-1"></i>
+              </a>
+            </li>
           </ul>
         </nav><!-- /.main-menu -->
       </div>
