--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Panelando</a>
+        <a class="navbar-brand" href="#">
+          Panelando
+          <i class="icon icon-food-1"></i>
+        </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,19 +60,25 @@
             <li class="active">
               <a href="#">
                 Home
-                <i class="icon icon-shop"></i>
+                <div class="link-icon">
+                  <i class="icon icon-shop"></i>
+                </div>
               </a>
             </li>
             <li>
               <a href="#">
                 Receitas
-                <i class="icon icon-food-1"></i>
+                <div class="link-icon">
+                  <i class="icon icon-food-1"></i>
+                </div>
               </a>
             </li>
             <li>
               <a href="#">
                 Nova Receita
-                <i class="icon icon-doc-1"></i>
+                <div class="link-icon">
+                  <i class="icon icon-doc-1"></i>
+                </div>
               </a>
             </li>
           </ul>
