--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,9 @@
         </button>
         <a class="navbar-brand" href="#">
           Panelando
-          <i class="icon icon-food-1"></i>
+          <div class="navbar-brand-icon">
+            <i class="icon icon-food-1"></i>
+          </div>
         </a>
       </div>
 
@@ -107,14 +109,14 @@
             <div class="item">
               <img src="http://dev.munfactory.com/cookbook/images/sausage-cabbage-and-tomato-1.jpg" alt="Segunda Receita">
               <div class="carousel-caption">
-                <span class="h1">Sanduíche de Filet Mignon</span>
+                <span class="h1">Virado de Repolho</span>
               </div>
             </div>
 
             <div class="item">
               <img src="http://dev.munfactory.com/cookbook/images/4646066888_397b6d0301_o.jpg" alt="Segunda Receita">
               <div class="carousel-caption">
-                <span class="h1">Virado de Repolho</span>
+                <span class="h1">Sanduíche de Filet Mignon</span>
               </div>
             </div>
           </div><!-- /.carouse-inner -->
