--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <![endif]-->
 </head>
 
-<body>  
+<body class="home">  
   <nav class="navbar navbar-default" role="navigation">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -133,7 +133,7 @@
     </div><!-- /.container -->
   </div><!-- /.row -->
 
-  <div class="row">
+  <div class="row l-main-section">
     <div class="container">
       <div class="col-md-4">
         <div class="recipe-block">
