--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <![endif]-->
 </head>
 
-<body class="home">  
+<body class="page-home">  
   <nav class="navbar navbar-default" role="navigation">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
