Add angular scaffolding

--- a/public/nova-receita.html
+++ b/public/nova-receita.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="panelando">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -70,5 +70,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="assets/javascripts/bootstrap.min.js"></script>
+  <!-- Angular framework -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+  <!-- Angular components -->
+  <script src="app/app.js"></script>
+  <script src="app/controllers.js"></script>
+  <script src="app/directives.js"></script>
 </body>
 </html>
