--- a/public/nova-receita.html
+++ b/public/nova-receita.html
@@ -61,6 +61,10 @@
               <span class="ingredient-number">1</span>
               <input type="text">
             </div>
+
+            <ingredients>
+              <ingredient-item></ingredient-item>
+            </ingredients>
           </div>
       </div>
     </div>
