--- a/public/nova-receita.html
+++ b/public/nova-receita.html
@@ -1,90 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="panelando">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Panelando</title>
-
-  <!-- Bootstrap -->
-  <link href="assets/stylesheets/style.css" rel="stylesheet">
-
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="favicon.ico">
-
-  <!-- Google fonts -->
-  <link href="http://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-
-<body class="page-nova-receita">  
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Alternar menu</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">
-          Panelando
-          <div class="navbar-brand-icon">
-            <i class="icon icon-food-1"></i>
-          </div>
-        </a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Cadastrar</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container -->
-  </nav>
-
-  <div class="row">
-    <div class="container">
-      <div class="col-md-8">
-        <div class="ingredients-block" ng-controller="IngredientsCtrl as Ingredients">
-          <div ng-repeat="ingredient in Ingredients.ingredientsList">
-            <span class="ingredient-number">{{ $index + 1 }}</span>
-            <div class="ingredient-item" ng-click="Ingredients.editIngredient($index)">{{ ingredient }}</div>
-  
-            <input type="text" value="{{ingredient}}" ng-model="Ingredients.editingIngredient[$index]" ng-keydown="Ingredients.saveIngredient($event, $index)">
-          </div>   
-
-          <input 
-          class="ingredient-item" 
-          type="text" 
-          placeholder="Digite o ingrediente e aperte enter"
-          ng-model="Ingredients.newIngredient" 
-          ng-keydown="Ingredients.addIngredient($event)">
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-  <!-- jQuery (necessary for Bootstrap"s JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="assets/javascripts/bootstrap.min.js"></script>
-  <!-- Angular framework -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-  <!-- Angular components -->
-  <script src="app/app.js"></script>
-  <script src="app/controllers.js"></script>
-  <script src="app/directives.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en" ng-app="panelando"></html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Panelando</title><link href="assets/stylesheets/style.css" rel="stylesheet"><link rel="shortcut icon" href="favicon.ico"><link href="http://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet"><link href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400" rel="stylesheet"><link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"></head><body class="page-nova-receita"><nav role="navigation" class="navbar navbar-default"><div class="container"><div class="navbar-header"><button type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" class="navbar-toggle collapsed"><span class="sr-only">Alternar menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand">Panelando<div class="navbar-brand-icon"><i class="icon icon-food-1"></i></div></a></div><div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse"><ul class="nav navbar-nav navbar-right"><li><a href="#">Login</a></li><li><a href="#">Cadastrar</a></li></ul></div></div></nav><div class="row"><div class="container"><div class="col-md-8"><div ng-controller="IngredientsCtrl as Ingredients" class="ingredients-block"><div ng-repeat="ingredient in Ingredients.ingredientsList"><span class="ingredient-number">{{ $index + 1 }}</span><div ng-click="Ingredients.editIngredient($index)" class="ingredient-item">{{ ingredient }}</div><input type="text" value="{{ingredient}}" ng-model="Ingredients.editingIngredient[$index]" ng-keydown="Ingredients.saveIngredient($event, $index)"></div><input type="text" placeholder="Digite o ingrediente e aperte enter" ng-model="Ingredients.newIngredient" ng-keydown="Ingredients.addIngredient($event)" class="ingredient-item"></div></div></div></div><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script><script src="assets/javascripts/bootstrap.min.js"></script><script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script><script src="app/app.js"></script><script src="app/controllers.js"></script><script src="app/directives.js"></script></body>
