--- a/public/nova-receita.html
+++ b/public/nova-receita.html
@@ -1,1 +1,48 @@
-<!DOCTYPE html><html lang="en" ng-app="panelando"></html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Panelando</title><link href="assets/stylesheets/style.css" rel="stylesheet"><link rel="shortcut icon" href="favicon.ico"><link href="http://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet"><link href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400" rel="stylesheet"><link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"></head><body class="page-nova-receita"><nav role="navigation" class="navbar navbar-default"><div class="container"><div class="navbar-header"><button type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" class="navbar-toggle collapsed"><span class="sr-only">Alternar menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand">Panelando<div class="navbar-brand-icon"><i class="icon icon-food-1"></i></div></a></div><div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse"><ul class="nav navbar-nav navbar-right"><li><a href="#">Login</a></li><li><a href="#">Cadastrar</a></li></ul></div></div></nav><div class="row"><div class="container"><div class="col-md-8"><div ng-controller="IngredientsCtrl as Ingredients" class="ingredients-block"><div ng-repeat="ingredient in Ingredients.ingredientsList"><span class="ingredient-number">{{ $index + 1 }}</span><div ng-click="Ingredients.editIngredient($index)" class="ingredient-item">{{ ingredient }}</div><input type="text" value="{{ingredient}}" ng-model="Ingredients.editingIngredient[$index]" ng-keydown="Ingredients.saveIngredient($event, $index)"></div><input type="text" placeholder="Digite o ingrediente e aperte enter" ng-model="Ingredients.newIngredient" ng-keydown="Ingredients.addIngredient($event)" class="ingredient-item"></div></div></div></div><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script><script src="assets/javascripts/bootstrap.min.js"></script><script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script><script src="app/app.js"></script><script src="app/controllers.js"></script><script src="app/directives.js"></script></body>
+<!DOCTYPE html>
+<html lang="en" ng-app="panelando"></html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>asdasdasdasdas</title>
+  <link href="assets/stylesheets/style.css" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link href="http://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+</head>
+<body class="page-nova-receita">
+  <nav role="navigation" class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" class="navbar-toggle collapsed"><span class="sr-only">Alternar menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand">Panelando
+          <div class="navbar-brand-icon"><i class="icon icon-food-1"></i></div></a>
+      </div>
+      <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Login</a></li>
+          <li><a href="#">Cadastrar</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="row">
+    <div class="container">
+      <div class="col-md-8">
+        <div ng-controller="IngredientsCtrl as Ingredients" class="ingredients-block">
+          <div ng-repeat="ingredient in Ingredients.ingredientsList"><span class="ingredient-number">{{ $index + 1 }}</span>
+            <div ng-click="Ingredients.editIngredient($index)" class="ingredient-item">{{ ingredient }}</div>
+            <input type="text" value="{{ingredient}}" ng-model="Ingredients.editingIngredient[$index]" ng-keydown="Ingredients.saveIngredient($event, $index)">
+          </div>
+          <input type="text" placeholder="Digite o ingrediente e aperte enter" ng-model="Ingredients.newIngredient" ng-keydown="Ingredients.addIngredient($event)" class="ingredient-item">
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="assets/javascripts/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+  <script src="app/app.js"></script>
+  <script src="app/controllers.js"></script>
+  <script src="app/directives.js"></script>
+</body>
