--- a/public/nova-receita.html
+++ b/public/nova-receita.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>asdasdasdasdas</title>
+  <title>Panelando - Nova Receita</title>
   <link href="assets/stylesheets/style.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="http://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
