Fix index.jade and nova-receita.jade

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,11 @@
       <div class="col-md-4">
         <nav role="navigation" class="main-menu">
           <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="#">Home
+            <li class="active"><a href="index.html">Home
                 <div class="link-icon"><i class="icon icon-shop"></i></div></a></li>
-            <li><a href="#">Receitas
+            <li><a href="receitas.html">Receitas
                 <div class="link-icon"><i class="icon icon-food-1"></i></div></a></li>
-            <li><a href="#">Nova Receita
+            <li><a href="nova-receita.html">Nova Receita
                 <div class="link-icon"><i class="icon icon-doc-1"></i></div></a></li>
           </ul>
         </nav>
