Update controllers.js and directives.js

--- a/public/nova-receita.html
+++ b/public/nova-receita.html
@@ -51,9 +51,9 @@
                
               {{ ingredient.name }}
             </div>
-            <input type="text" ng-value="ingredient.name" ng-if="ingredient.editing" ng-model="Ingredients.ingredientsList[$index].name" ng-keydown="Ingredients.saveIngredient($event, $index)" class="ingredient-item editing">
+            <input type="text" ng-if="ingredient.editing" ng-value="ingredient.name" ng-model="Ingredients.ingredientsList[$index].name" ng-keydown="Ingredients.saveIngredient($event, $index, true)" ng-blur="Ingredients.saveIngredient($event, $index)" focus="ingredient.editing" class="ingredient-item editing">
           </div>
-          <input type="text" placeholder="Digite o ingrediente e aperte enter" ng-model="Ingredients.newIngredient.name" ng-keydown="Ingredients.addIngredient($event)" class="ingredient-item">
+          <input type="text" placeholder="Digite o ingrediente e tecle enter" ng-model="Ingredients.newIngredient.name" ng-keydown="Ingredients.addIngredient($event)" class="ingredient-item">
         </div>
       </div>
     </div>
