--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js"></script>
   <script src="app/app.js"></script>
+  <script src="app/services.js"></script>
   <script src="app/controllers.js"></script>
   <script src="app/directives.js"></script>
 </body>
