--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <script src="assets/javascripts/angular.min.js"></script>
   <script src="assets/javascripts/angular-route.min.js"></script>
   <script src="assets/javascripts/jquery.min.js"></script>
+  <script src="assets/javascripts/dropzone.js"></script>
   <script src="app/app.js"></script>
   <script src="app/services.js"></script>
   <script src="app/controllers.js"></script>
