Add angular file upload

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,12 @@
 </head>
 <body>
   <ng-view></ng-view>
-  <script src="assets/javascripts/vendor/angular.min.js"></script>
-  <script src="assets/javascripts/vendor/angular-route.min.js"></script>
-  <script src="assets/javascripts/vendor/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="assets/javascripts/vendor/bootstrap.min.js"></script>
+  <script src="assets/javascripts/vendor/angular-file-upload-shim.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+  <script src="assets/javascripts/vendor/angular-file-upload.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js"></script>
   <script src="assets/javascripts/vendor/jasny-bootstrap.js"></script>
   <script src="app/app.js"></script>
   <script src="app/services.js"></script>
