--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Panelando</title>
   <link href="assets/stylesheets/style.css" rel="stylesheet">
+  <link href="  https://raw.githubusercontent.com/daneden/animate.css/master/animate.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="http://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400" rel="stylesheet">
@@ -16,6 +17,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js"></script>
-  <script src="assets/javascripts/app.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-animate.js"></script>
   <script src="assets/javascripts/main.js"></script>
+  <script src="assets/javascripts/app.js"></script>
 </body>
